--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   font-family: var(--font-family), sans-serif;
   font-weight: 500;
   font-size: calc(var(--font-size) * var(--space-medium));
-  background-color: var(--color-bg-base);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .visually-hidden {
