--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   font-family: var(--font-family), sans-serif;
   font-weight: 500;
   font-size: calc(var(--font-size) * var(--space-medium));
-  background-color: rgba(46,52,64, 0.4);
+  /**background-color: rgba(46,52,64, 0.4);**/
 }
 
 .visually-hidden {
@@ -68,7 +68,7 @@ body {
   display: flex;
 
   color: var(--color-fg-surface);
-  background-color: var(--color-bg-surface);
+  background-color: rgba(46,52,64, 0.1);
   border-radius: var(--surface-borderRadius);
   overflow: hidden;
   border: var(--space-smallest) solid var(--color-primary-base);
