--- a/variables.css
+++ b/variables.css
@@ -2,8 +2,8 @@
   /** colors */
   --color-name: nord;
   --color-bg-shade: #252A33;
-  --color-bg-base: #2E3440;
-  --color-bg-surface: #373E4D;
+  --color-bg-base: transparent;
+  --color-bg-surface: transparent;
   --color-bg-highlight: #40495A;
   --color-fg-shade: #768CB2;
   --color-fg-base: #A6B4CD;
